# Scouting-System-Web-Application

./: .replit  README.md  pyproject.toml  serve.py
app/: __init__.py  assets.py  config.py
app/auth/: __init__.py  views.py
app/auth/templates/: login.html
app/static/css/: style.css
app/templates/: base.html  index.html
