[tool.poetry]
name = "repl-nix-scouting-system-web-application"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_scouting_system_web_application"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
flask-assets = "^2.0"
jsmin = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
